--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -304,3 +304,89 @@ h4 {
   text-align: center;
 }
 /*Finished the Testimonials Section Styling*/
+
+/*FAQ Section Styling*/
+/* faq */
+.faq {
+  max-width: 350px;
+  margin: auto;
+  margin-top: 231.8px;
+}
+
+.desktop-faq {
+  display: none;
+}
+
+.faq-heading {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.text-faq {
+  width: 87px;
+  height: 57px;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 57px;
+  letter-spacing: 0.2px;
+  color: #fff;
+}
+
+.paragraph-faq {
+  width: 225px;
+  height: 90px;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 20px;
+  text-align: center;
+  letter-spacing: 0.2px;
+  color: #fff;
+}
+
+.card-faq-item {
+  display: flex;
+  gap: 26px;
+  padding: 22px;
+  height: 109px;
+  background: #fff;
+  border-radius: 9px;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 30px;
+}
+
+.fa-chevron-right {
+  background: #fff;
+  font-weight: 700;
+  font-size: 50px;
+  margin-top: -45px;
+}
+
+.heading-faq,
+.heading-5-faq,
+.heading-6-faq {
+  background-color: #fff;
+}
+
+.heading-5-faq {
+  width: 100%;
+  height: 25px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1;
+  letter-spacing: 0.1px;
+  color: #252b42;
+}
+
+.heading-6-faq {
+  width: 222px;
+  height: 6px;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 20px;
+  letter-spacing: 0.2px;
+  color: #737373;
+}
+/*End of Styling of the FAQ Section*/
