added style to pricing  section

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -390,3 +390,280 @@ h4 {
   color: #737373;
 }
 /*End of Styling of the FAQ Section*/
+
+/*styling of the Pricing Section */
+.pricing {
+  max-width: 375px;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 2570px;
+  width: 100%;
+}
+
+.pricing-title {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 60px;
+}
+
+.pricing-heading {
+  width: 142px;
+  height: 30px;
+  font-weight: 400;
+  font-size: 40px;
+  line-height: 57px;
+  text-align: center;
+  letter-spacing: 0.2px;
+  color: #fff;
+}
+
+.pricing-paragraph {
+  width: 264px;
+  height: 80px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 20px;
+  text-align: center;
+  letter-spacing: 0.2px;
+  color: #fff;
+}
+
+.pricing-style {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 40px 30px;
+  width: 99%;
+  background: #fff;
+  border: 1px solid #23a6f0;
+  margin-bottom: 30px;
+}
+
+.pricing-style-1 {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-items: center;
+  padding: 40px 30px;
+  width: 99%;
+  background: #23a6f0;
+  border: 1px solid #23a6f0;
+  border-radius: 10px;
+  margin-bottom: 30px;
+}
+
+.pricing-heading-3-style {
+  width: 139px;
+  height: 32px;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 32px;
+  letter-spacing: 0.1px;
+  color: #fff;
+}
+
+.pricing-heading-5-style {
+  width: 160px;
+  height: 48px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 24px;
+  text-align: center;
+  letter-spacing: 0.1px;
+  color: #fff;
+}
+
+.pic-price-1-style {
+  width: 88px;
+  height: 57px;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 57px;
+  letter-spacing: 0.2px;
+  color: #fff;
+}
+
+.ronded-icon-pricing {
+  width: 96px;
+  height: 96px;
+  background: #23a6f0;
+  border-radius: 200px;
+}
+
+.vector-card-pricing {
+  position: absolute;
+  background: #23a6f0;
+  margin: 23.8px;
+  width: 50px;
+}
+
+.pricing-heading-3 {
+  width: 64px;
+  height: 32px;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 32px;
+  text-align: center;
+  letter-spacing: 0.1px;
+  color: #252b42;
+  background: #fff;
+}
+
+.pricing-title-content,
+.price,
+.pic-price-1,
+.pic-price-2 {
+  background: #fff;
+}
+
+.pricing-heading-3-style,
+.pricing-heading-5-style,
+.pricing-title-content-style,
+.pic-price-1-style,
+.pic-price-2-style,
+.pricing-5-style,
+.list,
+.tick,
+.tick-text,
+.price-style {
+  background: #23a6f0;
+}
+
+.list {
+  display: flex;
+  gap: 10px;
+}
+
+.tick {
+  width: 32px;
+  height: 32px;
+  margin-top: 10px;
+}
+
+.tick-text {
+  width: 205px;
+  height: 29.25px;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 24px;
+  letter-spacing: 0.2px;
+  color: #fff;
+}
+
+.pic-price-2 {
+  width: 11px;
+  height: 16px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 10px;
+  letter-spacing: 0.1px;
+  color: #23a6f0;
+}
+
+.pic-price-1 {
+  align-items: center;
+  width: 28px;
+  height: 35px;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 50px;
+  letter-spacing: 0.2px;
+  color: #23a6f0;
+}
+
+.pricing-title-content,
+.pricing-title-content-style {
+  display: flex;
+  gap: 10px;
+  justify-content: center;
+  align-items: center;
+  line-height: 10px;
+}
+
+.pricing-title-content-style {
+  margin-bottom: 36.38px;
+}
+
+.pricing-heading-5 {
+  width: 160px;
+  height: 48px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 24px;
+  text-align: center;
+  letter-spacing: 0.1px;
+  color: #737373;
+  background: #fff;
+}
+
+.pricing-5 {
+  width: 78px;
+  height: 4px;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 24px;
+  letter-spacing: 0.2px;
+  color: #8ec2f2;
+  background: #fff;
+}
+
+.pricing-5-style {
+  width: 78px;
+  height: 4px;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 24px;
+  letter-spacing: 0.2px;
+  color: #fff;
+}
+
+.pricing-heading-6 {
+  width: 219px;
+  height: 96px;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 24px;
+  text-align: center;
+  letter-spacing: 0.2px;
+  color: #737373;
+  background: #fff;
+}
+
+.price-button,
+.price-button-style {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 15px 40px;
+  gap: 10px;
+  width: 246px;
+  height: 52px;
+  border-radius: 5px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 22px;
+  text-align: center;
+  letter-spacing: 0.2px;
+}
+
+.price-button {
+  background: #23a6f0;
+  border: 1px solid #23a6f0;
+  color: #fff;
+}
+
+.price-button-style {
+  border: 1px solid #fff;
+  background-color: #fff;
+  color: #23a6f0;
+  margin-top: 35px;
+}
+/*End of Pricing Section Styling*/
+
