finished the responsive styling

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1591,7 +1591,7 @@ h4 {
     box-sizing: border-box;
     position: absolute;
     background: #23a6f0;
-    border: 1px solid #e6e6e6;
+    border: 1px solid #23a6f0;;
     border-radius: 0 5px 5px 0;
     height: 62px;
     width: 117px;
