futher linter checks

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1529,7 +1529,7 @@ h4 {
     color: #737373;
   }
 
-  /* footer */
+  /* Footer */
   .footer-section {
     max-width: 1454px;
     margin: auto;
