adjusted the page font styling

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,4 +1,6 @@
 /* represented by clint360 */
+@import url('https://fonts.googleapis.com/css?family=Montserrat');
+
 * {
   background: #252b42;
   font-family: Montserrat, sans-serif;
