corrected some JSPD linter errors

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,5 +1,5 @@
 /* represented by clint360 */
-@import url('https://fonts.googleapis.com/css?family=Montserrat');
+@import url("https://fonts.googleapis.com/css?family=Montserrat");
 
 * {
   background: #252b42;
@@ -7,143 +7,6 @@
 }
 
 /* Styling of the navbar and wepage header */
-@media screen and (min-width: 768px) {
-  body {
-    font-weight: bolder;
-  }
-
-  .heading {
-    margin-bottom: -100px;
-  }
-
-  .nav-class {
-    width: 100%;
-    max-width: 1440px;
-    margin: auto;
-  }
-
-  .bars {
-    display: none;
-  }
-
-  .fa-arrow-right {
-    background: #23a6f0;
-  }
-
-  .menu,
-  .menu-link {
-    display: flex;
-    align-items: center;
-    gap: 21px;
-  }
-
-  .menu {
-    gap: 50px;
-    width: 100%;
-    padding-right: 15px;
-  }
-
-  .right-menu {
-    display: flex;
-    gap: 45px;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .menu-a {
-    font-weight: 600;
-    font-size: 14px;
-    line-height: 24px;
-    text-align: center;
-    letter-spacing: 0.2px;
-    color: #fff;
-    text-decoration: none;
-  }
-
-  .menu-button {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    padding: 15px 25px;
-    gap: 15px;
-    width: 100%;
-    height: 52px;
-    background: #23a6f0;
-    border-radius: 5px;
-    border: 1px solid #23a6f0;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 22px;
-    letter-spacing: 0.2px;
-    color: #fff;
-  }
-
-  .heading-2 {
-    display: flex;
-    gap: 17.5px;
-    max-width: 1400px;
-    margin: auto;
-    height: 777px;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .heading-class {
-    display: flex;
-    justify-content: flex-start;
-  }
-
-  .heading-home {
-    width: 64%;
-    min-height: 500px;
-  }
-
-  .heading-class-text {
-    text-align: start;
-    width: 75%;
-    height: 10.5vh;
-    font-weight: 800;
-    font-size: 3.5vw;
-    line-height: 80px;
-    letter-spacing: 0.2px;
-  }
-
-  .crood-user-interface {
-    width: 40vw;
-    height: 75vh;
-  }
-
-  .heading-h4-home {
-    text-align: start;
-    width: 90%;
-    height: 90px;
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 40px;
-    letter-spacing: 0.2px;
-    color: #fff;
-  }
-
-  .button-home {
-    display: flex;
-    gap: 10px;
-  }
-
-  .heading-button-1,
-  .heading-button-2 {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 15px 36px;
-    gap: 10px;
-    width: 185px;
-    height: 52px;
-    font-size: 13px;
-    line-height: 22px;
-  }
-}
-
 nav {
   display: flex;
 }
@@ -341,71 +204,6 @@ h4 {
 /* End of Features Section Styling */
 
 /* Testimonials' Styling */
-@media screen and (min-width: 768px) {
-  .testimonials {
-    max-width: 1440px;
-    margin: auto;
-    margin-bottom: 100px;
-  }
-
-  .testimonail-card {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 40px 35px;
-    gap: 30px;
-    width: 744px;
-    height: 362.01px;
-  }
-
-  .testimonials-heading {
-    width: 100%;
-    height: 30px;
-    font-weight: 700;
-    font-size: 50px;
-    line-height: 57px;
-    letter-spacing: 0.2px;
-  }
-
-  .testimonial-paragraph {
-    width: 470px;
-    height: 40px;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 20px;
-    text-align: center;
-    letter-spacing: 0.2px;
-    color: #fff;
-    margin-bottom: 80px;
-  }
-
-  .testimonial-text {
-    width: 500px;
-    height: 40px;
-    left: 138.5px;
-    top: 92.01px;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 32px;
-  }
-
-  .testimonial-pic {
-    height: 18.3473px;
-    width: 18.3445px;
-    left: 1.8343px;
-    top: 1.8333px;
-    border-radius: 0;
-  }
-
-  .testimonial-author {
-    font-size: 24px;
-    width: 157px;
-    height: 5px;
-    font-weight: 900;
-    letter-spacing: 0.1px;
-  }
-}
-
 .testimonials {
   max-width: 350px;
   margin: auto;
