--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,5 +1,5 @@
 /* represented by clint360 */
-""https://fonts.googleapis.com/css?family=Montserrat"" @import;
+@import url("https://fonts.googleapis.com/css?family=Montserrat");
 
 * {
   background: #252b42;
